[gd_scene load_steps=11 format=3 uid="uid://lgcdldwrisa2"]

[ext_resource type="Script" path="res://scripts/laser.gd" id="1_h3ie4"]
[ext_resource type="Texture2D" uid="uid://duch4drp3gbmw" path="res://assets/laser.webp" id="2_ccmkj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d33hj"]
radius = 2.66667
height = 16.0

[sub_resource type="Curve" id="Curve_qsubg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_prli3"]
curve = SubResource("Curve_qsubg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4u10b"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 0.1
initial_velocity_max = 0.5
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_prli3")
color = Color(1, 0, 0, 0.443137)

[sub_resource type="Gradient" id="Gradient_wsbbt"]
offsets = PackedFloat32Array(0, 0.979487)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7cl5r"]
gradient = SubResource("Gradient_wsbbt")

[sub_resource type="CurveTexture" id="CurveTexture_ckgtl"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7tgr8"]
particle_flag_disable_z = true
radial_velocity_max = 30.0
radial_velocity_curve = SubResource("CurveTexture_ckgtl")
gravity = Vector3(0, 0, 0)
scale_min = 2.15
scale_max = 2.15
color = Color(1, 0.580392, 0, 1)
color_ramp = SubResource("GradientTexture1D_7cl5r")

[node name="Laser" type="Area2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_h3ie4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_d33hj")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_ccmkj")

[node name="LaserTimeout" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Trail" type="GPUParticles2D" parent="."]
amount = 5
process_material = SubResource("ParticleProcessMaterial_4u10b")
lifetime = 1.5
trail_enabled = true

[node name="Explode" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_7tgr8")
lifetime = 2.0
one_shot = true
speed_scale = 4.0
explosiveness = 1.0
randomness = 1.0
trail_enabled = true
trail_lifetime = 0.1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserTimeout" to="." method="_on_laser_timeout_timeout"]
[connection signal="finished" from="Explode" to="." method="_on_explode_finished"]
